# swigexample

./: .gitignore  README.md
cpp/: CMakeLists.txt  Person.cs  a.cpp  a.h  example.i  example_wrap.cxx
csharp/: Program.cs  SWIGTYPE_p_string.cs  Test.cs  mymodulePINVOKE.cs
